# Harness-AI-Workspace-Template

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  SYSTEM_NAVIGATOR.md  adr.md  bkit.config.json  code-convention.md  pyproject.toml
.agents/agents/: bkend-expert.md  bkit-impact-analyst.md  cc-version-researcher.md  code-analyzer.md  cto-lead.md  design-validator.md  gap-detector.md  pdca-eval-act.md  pdca-eval-check.md  pdca-eval-design.md  pdca-eval-do.md  pdca-eval-plan.md  pdca-eval-pm.md  pdca-iterator.md  pm-discovery.md  pm-lead-skill-patch.md  pm-lead.md  pm-prd.md  pm-research.md  pm-strategy.md  qa-monitor.md  skill-needs-extractor.md
.agents/mcp/: wiki-mcp-server.py
.agents/subagents/: semantic-extractor.md
.bkit/plugin/: bkit.config.json
.bkit/state/: memory.json  pdca-status.json
.claude/: hooks.json  settings.json
.claude/commands/: btw.md  code-review.md  development-pipeline.md  imprint.md  pdca.md  plan-plus.md  zero-script-qa.md
.claude/hooks/: generate-navigator-cli.js  imprint-prompt-match.js  imprint-session-start.js  navigator-updater-helpers.js  navigator-updater.js  post-tool-validate.js  pre-tool-guard.js  prompt-refiner.js  wiki-clippings-check.js  wiki-extract-post.js  wiki-pdf-stage.js
.harness/: active-imprints.md  imprints.json  next-session.md
Projects/: PYU설명및프롬프트즉흥.md  PYU설명서(읽고시작하세요).md
Projects/260414_VideoAnalyzer/: .gitignore  CLAUDE.md  adr.md  requirements.txt  test_hwpx_output.hwpx  test_report.hwpx
Projects/260415_document_analyzer/: CLAUDE.md  README.md
Projects/_TEMPLATE/: CLAUDE.md  (+1 more)
(+2647 files in other folders)
